fix banner overflow affecting other components (#394)

--- a/TASVideos/wwwroot/css/site.scss
+++ b/TASVideos/wwwroot/css/site.scss
@@ -39,10 +39,8 @@ body {
 
 #banner {
 	background: #110931;
-	overflow: hidden;
 
 	.site-banner {
-		position: absolute;
 		top: 0;
 		left: 0;
 	}
